kubernetes/dev.yml
# ... Deployment YAML definition
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoicing-prc-dmn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invoicing-prc-dmn
  template:
    metadata:
      labels:
        app: invoicing-prc-dmn
    spec:
      #nodeName: node-example
      containers:
        - name: invoicing-prc-dmn
          image: 234366607644.dkr.ecr.eu-west-1.amazonaws.com/invoicing-prc-dmn:latest
          ports:
            - containerPort: 8080
---
# ... Service YAML definition
apiVersion: v1
kind: Service
metadata:
  name: invoicing-prc-dmn
spec:
  selector:
    app: invoicing-prc-dmn
  ports:
    - port: 8080
      targetPort: 8080
